# outputproof

./: README.md
.github/workflows/: ci.yml  outputproof-gate.yml
.outputproof/: github-gate.yaml
outputproof-sdk/: .gitignore  COMMERCIAL.md  LICENSE  LICENSE-HISTORY.md  NOTICE  README.md  demo-assertions.yaml  pyproject.toml
outputproof-sdk/examples/: basic_verification.py  langchain_integration.py
outputproof-sdk/src/outputproof/: __init__.py  core.py  github_actions.py  models.py  storage.py
outputproof-sdk/src/outputproof/assertions/: __init__.py  base.py  behavioral.py  contract.py  semantic.py  structural.py
outputproof-sdk/src/outputproof/cli/: __init__.py  main.py
outputproof-sdk/src/outputproof/integrations/: __init__.py  base.py  claude_code.py  langchain.py
outputproof-sdk/src/outputproof/judge/: __init__.py  prompts.py  scorer.py
outputproof-sdk/tests/: __init__.py  test_assertions.py  test_branding.py  test_cli_storage.py  test_core_enterprise.py  test_github_actions_gate.py  test_judge_prompts.py  test_license_boundary.py
outputproof-server/: .gitignore  LICENSE  README.md  pyproject.toml
outputproof-server/src/outputproof_server/: __init__.py  app.py  cli.py  storage.py  time.py
outputproof-server/tests/: test_server_app.py
